--- a/templates/show_boards.html
+++ b/templates/show_boards.html
@@ -1,7 +1,5 @@
 {% load can_user_view_it %}
 
-
-
     <div class="card m-2">
         <div class="card-header px-2 py-0">
             <a class="d-inline" href={{parent.get_absolute_url}}>{{ parent.name }}</a>
@@ -12,38 +10,41 @@
             </span>
         </div>
     {% for board in parent.child.all %}
-        <div class="bg-light border p-2">
-                                    <span style="font-size: 18px">
-                                        <a class="font-weight-bold" href={{ board.get_absolute_url }}>{{ board.name }}</a>
-                                        <span>
-                                            {% if  board.description %}
-                                                <span style="font-size: 16px">
-                                                    <br> {{ board.description }}
-                                                </span>
-                                            {% endif %}
-                                            {% if board.child.all %}
-                                                <span style="font-size: 14px">
-                                                    <br> SubForums:
-                                                    {% for subboard in board.child.all %}
-                                                        {% can_user_view_it user subboard as result %}
-                                                        {% if result %}
-                                                            <a href="{{ subboard.get_absolute_url }}">{{ subboard.name }}</a>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                </span>
-                                            {% endif %}
+        {% can_user_view_it request.user board as can_user_view_it %}
+            {% if can_user_view_it %}
+            <div class="bg-light border p-2">
+                                        <span style="font-size: 18px">
+                                            <a class="font-weight-bold" href={{ board.get_absolute_url }}>{{ board.name }}</a>
+                                            <span>
+                                                {% if  board.description %}
+                                                    <span style="font-size: 16px">
+                                                        <br> {{ board.description }}
+                                                    </span>
+                                                {% endif %}
+                                                {% if board.child.all %}
+                                                    <span style="font-size: 14px">
+                                                        <br> SubForums:
+                                                        {% for subboard in board.child.all %}
+                                                            {% can_user_view_it user subboard as result %}
+                                                            {% if result %}
+                                                                <a href="{{ subboard.get_absolute_url }}">{{ subboard.name }}</a>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </span>
+                                                {% endif %}
+                                            </span>
                                         </span>
-                                    </span>
 
 
-            <span class="float-right d-flex">
-                <span class="px-5 mx-3">{{ board.get_topic_count }}</span>
-                <span class="px-5 mx-3">{{ board.get_post_count }}</span>
-                <span>
-                    <div class="px-5 mx-3">{{ board.get_last_posted_topic }}</div>
-                    <div class="px-5 mx-3">{{ board.get_last_posted_user }}</div>
+                <span class="float-right d-flex">
+                    <span class="px-5 mx-3">{{ board.get_topic_count }}</span>
+                    <span class="px-5 mx-3">{{ board.get_post_count }}</span>
+                    <span>
+                        <div class="px-5 mx-3">{{ board.get_last_posted_topic }}</div>
+                        <div class="px-5 mx-3">{{ board.get_last_posted_user }}</div>
+                    </span>
                 </span>
-            </span>
-        </div>
+            </div>
+        {% endif %}
     {% endfor %}
     </div>
