--- a/templates/topics_app/topics.html
+++ b/templates/topics_app/topics.html
@@ -51,7 +51,7 @@
                 {{ post.content }}
 
                 {% for message in post.get_ban_warrning_reason_to_display %}
-                    <span>{{ message }}</span>
+                    <span> Warrning: {{ message }}</span>
                 {% endfor %}
 
 
